<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/incid_importancia_list_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/incid_importancia_alias_view"
        style="@style/textBase.textFieldLabel1"
        android:layout_weight="0"
        android:gravity="start"/>
    <TextView
        style="@style/textBase.textFieldLabel1"
        android:layout_weight="0"
        android:gravity="start"
        android:text="@string/dos_puntos"/>
    <TextView
        android:id="@+id/incid_importancia_rating_view"
        style="@style/textBase.textFieldLabel2"
        android:layout_marginStart="@dimen/simple_horizontal_margin"
        android:layout_weight="1"
        android:gravity="start"/>

</LinearLayout>