<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/incid_see_usercomu_importancia_ac"
    style="@style/baseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".incidencia.list.importancia.IncidSeeUserComuImportanciaAc">

    <include layout="@layout/appbar_include_design"/>

    <fragment
        android:id="@+id/incid_see_usercomu_importancia_frg"
        android:name="com.didekindroid.incidencia.list.importancia.IncidSeeUserComuImportanciaFr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/app_bar_bottom_margin"
        tools:layout="@layout/incid_see_usercomu_importancia_fr"/>

</android.support.design.widget.CoordinatorLayout>