...
    <string name="app_name" translatable="false">didekinaar</string>
    <!--*****************************************************************************-->
    <!--                                 GENERIC                                     -->
    <!--*****************************************************************************-->
    <!-- Formats-->
    <string name="dos_puntos" translatable="false">:</string>
    <string name="no_sabe" translatable="false">....</string>
    <!--Input controls-->
    <string name="search_button">Buscar</string>
    <string name="checkbox_si">Sí</string>
    <string name="checkbox_no">No</string>
    <string name="euros_rot">EUR</string>
    <string name="decimal_separator">,</string>
    <string name="navigate_up_txt">Desplazarse hacia arriba</string>
    <!--Menús-->
    <!--Messages-->
    <string name="no_internet_conn_toast">No hay conexión de red disponible.</string>
    <string name="exception_generic_message">No podemos continuar. Inténtalo en unos segundos nuevamente.</string>
    <string name="error_validation_msg">Los siguientes datos no son válidos: </string>
    <!-- Google Cloud Messages -->
    <string name="gcm_message_generic_subtext">Pulsa aquí para ver los detalles.</string>
    <!--******************************************************************************-->
    <!--                                  USUARIO                                     -->
    <!--******************************************************************************-->
    <!-- ============================= MENUS ================================= -->
...
