<RelativeLayout
    android:id="@+id/incid_reg_frg_layout"
    style="@style/baseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".incidencia.core.reg.IncidRegFr">

    <EditText
        android:id="@+id/incid_reg_desc_ed"
        style="@style/textBase.editField.description"
        android:hint="@string/incid_reg_hint"
        />

    <Spinner
        android:id="@+id/incid_comunidad_spinner"
        style="@style/spinnerBase"
        android:layout_below="@+id/incid_reg_desc_ed"/>

    <Spinner
        android:id="@+id/incid_reg_ambito_spinner"
        style="@style/spinnerBase"
        android:layout_below="@+id/incid_comunidad_spinner"/>

    <Spinner
        android:id="@+id/incid_reg_importancia_spinner"
        style="@style/spinnerBase"
        android:layout_below="@+id/incid_reg_ambito_spinner"/>

</RelativeLayout>