...
            style="@style/textBase.textFieldLabel2"/>
    </LinearLayout>

    <include layout="@layout/incid_edit_importancia_include"/>

    <Button
        android:id="@+id/incid_edit_fr_modif_button"
        style="@style/textBase.acButton1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/modif_button_rot"/>

    <include
...
