<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/baseLayout.scroll"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        style="@style/baseLayout"
        tools:context=".incidencia.core.reg.IncidRegAc">

        <include layout="@layout/appbar_include_design"/>

        <LinearLayout
            android:id="@+id/incid_reg_ac_layout"
            style="@style/baseLayout"
            android:layout_marginTop="@dimen/app_bar_bottom_margin">

            <fragment
                android:id="@+id/incid_reg_frg"
                android:name="com.didekindroid.incidencia.core.reg.IncidRegFr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:layout="@layout/incid_reg_frg"/>

            <Button
                android:id="@+id/incid_reg_ac_button"
                style="@style/textBase.acButton1"
                android:layout_gravity="center_horizontal"
                android:text="@string/incid_reg_ac_button_rot"/>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</ScrollView>
